--- a/src/app/topnav/topnav.component.css
+++ b/src/app/topnav/topnav.component.css
@@ -14,6 +14,12 @@
     margin-right: 2px;
 }
 
+.input-box {
+    width: 15vw;  
+    display: flex;
+    justify-content: center;  
+}
+
 .toolbar-main-buttons {
     width: 70vw;
     display: flex;
@@ -21,8 +27,9 @@
 }
 
 .toolbar-other-buttons {
+    width: 15vw;
     display: flex;
-    justify-content: space-evenly;
+    justify-content: center;
 }
 
 :host {
